Fix theme picker modal hover state in high contrast

--- a/react-common/styles/theming/ThemePickerModal.less
+++ b/react-common/styles/theming/ThemePickerModal.less
@@ -26,7 +26,8 @@
         &:hover {
             border: 1px solid var(--pxt-focus-border);
             cursor: pointer;
-            background-color: var(--pxt-neutral-stencil1);
+            background-color: var(--pxt-neutral-background1-hover);
+            color: var(--pxt-neutral-foreground1-hover);
         }
 
         .theme-info-box {
